--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
  <h2>Welcome to My Page</h2>
+ <h3>using web VS Code </h3>
  <hr>
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam deleniti fugit praesentium ipsa! Reprehenderit dolor explicabo, ullam minima quis harum aspernatur earum blanditiis amet aperiam maiores at nulla. Amet, in?</p>
 </body>
